# avilla-test

./: .gitignore  README.md  main.py  pyproject.toml
data/: harmoland-console.db
libs/: __init__.py  aiohttp_service.py  config.py  fonts_provider.py  logger.py  path.py  text2img.py  typing.py
libs/control/: __init__.py  permission.bak.py
libs/database/: interface.py  manager.py  service.py
modules/: #event_example.py  bili_share_resolver.py  bot_status.py  dont_nudge_me.py  error_handler.py  event_example.py  mc_wiki_searcher.py  renpin_checker.py  roll.py  status.py  testerror.py  the_wondering_earth_counting_down.py
modules/bili_share_resolver/: __init__.py
modules/db_test/: __init__.py  model.py
modules/eat_what/: __init__.py
modules/minecraft_ping/: __init__.py  aiodns_resolver.py  ping_client.py  utils.py
utils/: __init__.py
