[project]
name = "avilla-test"
version = "0.1.0"
description = ""
authors = [
    {name = "Redlnn", email = "w731347477@gmail.com"},
]
dependencies = [
    "aiofile>=3.8.8",
    "aiohttp[speedups]>=3.10.5",
    "aiosqlite>=0.20.0",
    "arclet-alconna-avilla>=0.19.1",
    "asyncmy>=0.2.9",
    "avilla-core>=1.0.0a26",
    "avilla-elizabeth>=1.0.0a31",
    "avilla-onebot-v11>=1.0.0a28",
    "avilla-qqapi>=1.0.0a31",
    "avilla-standard-qq>=1.0.0a21",
    "avilla-twilight>=0.3.1",
    "creart>=0.3.0",
    "dnspython>=2.6.1",
    "graia-amnesia>=0.9.0",
    "graia-broadcast>=0.23.5",
    "graia-saya>=0.0.19",
    "graia-scheduler>=0.3.1",
    "graiax-playwright>=0.4.4",
    "graiax-shortcut>=0.1.0",
    "graiax-text2img-playwright>=0.5.0",
    "jinja2>=3.1.4",
    "kayaku>=0.5.4",
    "launart>=0.8.2",
    "orjson>=3.10.7",
    "pillow>=10.4.0",
    "psutil>=6.0.0",
    "pydantic>=2.8.2",
    "qrcode>=7.4.2",
    "selectolax>=0.3.21",
    "sqlalchemy[asyncio]>=2.0.32",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "AGPL-3.0-only"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "black>=24.8.0",
    "isort>=5.13.2",
    "ruff>=0.6.1",
]

[tool.black]
line-length = 120
target-version = ["py311"]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    # https://beta.ruff.rs/docs/rules
    "E",  # pycodestyle
    "F",  # pyflakes
    "UP", # pyupgrade
    # "I",  # isort
    # "D",  # pydocstyle
    "ASYNC", # flake8-async
]
ignore = ["F401"]

[tool.ruff.lint.pydocstyle]
convention = "google"
